# Clinic-demato-ai

./: .env.example  .gitignore  .vercelignore  README.md  api.py  pyproject.toml  requirements.txt  vercel.json
agent_api/: agent.py
auth/: deps.py
billing/: limits.py  stripe_client.py  webhook.py
db/: supabase_client.py
dns/: cloudflare.py
frontend/: next.config.ts  package-lock.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/set-password/: page.tsx
frontend/app/super/: page.tsx
frontend/lib/: api.ts
frontend/public/: manifest.json  sw.js
middleware/: tenant.py
scripts/: migrate_from_blob.py  sync_stripe_plans.py
storage/: config.py
supabase/migrations/: 001_init.sql
templates/: admin.html  index.html  set_password.html  super_admin.html
tools/: cost_tracker.py  fal_points.py  models.py
vercel/: domains.py
